# Lumen

./: .gitignore  Makefile  README.md  lumen.spec  pyproject.toml
.github/workflows/: ci.yml
assets/fonts/: README.md
docs/: architecture.md  brainstorming-session-results.md  brief.md  fonts.md  front-end-spec.md  ml-feature-analysis-design.md  prd.md  sprint-change-proposal-2026-01-12.md  sprint-change-proposal-efficiency-stoploss.md  sprint-change-proposal-winloss-indicator.md
docs/architecture/: 1-introduction.md  10-error-handling-resilience.md  11-build-distribution.md  12-operational-considerations.md  2-high-level-architecture.md  3-tech-stack.md  4-data-models.md  5-components.md  6-core-workflows.md  7-development-workflow.md  8-testing-strategy.md  9-coding-standards.md  appendix-requirements-traceability.md  index.md  table-of-contents.md
docs/designs/: chart-viewer-ui.html  data-binning-tab.html  time-stop-tab-design.html
docs/plans/: 2026-01-11-cicd-workflow.md  2026-01-12-adjustment-calculation-fix.md  2026-01-12-chart-filter-fix.md  2026-01-12-column-mapper-fixes.md  2026-01-12-display-formatting-fixes.md  2026-01-12-four-issues-fix.md  2026-01-13-column-filter-panel-redesign.md  2026-01-13-comparison-ribbon-sizing-fix.md  2026-01-13-feature-explorer-enhancements.md  2026-01-13-filter-chip-fixes.md  2026-01-13-filter-panel-ux-improvements.md  2026-01-13-five-issues-fix.md  2026-01-13-four-issues-fix.md  (+34 more)
mcp_server/: server.py
scripts/: diagnose_data.py
src/: __init__.py  __version__.py  main.py
tests/: __init__.py  conftest.py
(+441 files in other folders)
