[project]
name = "lumen"
version = "1.0.0"
description = "Lumen - Trading Analytics Application"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6.0",
    "pyqtgraph>=0.13.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "PyQt6Ads>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.3.0",
    "pytest-cov>=4.1.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs",
    "PyQt6-stubs",
    "pre-commit>=3.7.0",
    "pyinstaller>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "widget: marks tests requiring Qt event loop",
]
